--- a/nextflow.config
+++ b/nextflow.config
@@ -1,3 +1,15 @@
+k8s {
+   namespace = 'medgen-ns'
+   runAsUser = 1000
+   storageClaimName = 'home-patricie-0'
+   storageMountPath = '/home'
+   homeDir = '/home/user/k8s_test'
+   launchDir = '/home/user/k8s_test/launch'
+   projectDir = '/home/user/k8s_test/project'
+   workDir = '/home/user/k8s_test/temp'
+}
+
+
 params {
 outdir = "/home/user/project/results"
 genome = "/home/user/project/ref/index/Homo_sapiens_assembly38.fasta.64"
@@ -9,5 +21,15 @@ md_output = "/home/user/project/results/HG002_HiSeq_2MergedRuns/MarkDuplicates"
 true_vcf = "/home/user/project/results/true_vcf/HG002_GRCh38_1_22_v4.2.1_benchmark.vcf.gz"
 script = "/home/user/project/src/benchmark/Staz/python_staz/benchmark.py"
 
+}
+
+process {
+   shell = ['/bin/bash', '-euo', 'pipefail']
+   container = 'registry.gitlab.ics.muni.cz:443/450402/btk_k8s:16'
+   scratch = true
+   executor = 'k8s'
+   cpus = 1
+   memory = '1GB'
+   pod = [[securityContext:[fsGroupChangePolicy:'OnRootMismatch', runAsUser:1000, runAsGroup:1, fsGroup:1]], [nodeSelector:'storage=local-ssd']]
 }
 
