--- a/nextflow.config
+++ b/nextflow.config
@@ -3,23 +3,23 @@ k8s {
    runAsUser = 1000
    storageClaimName = 'home-patricie-0'
    storageMountPath = '/home'
-   homeDir = '/home/user/k8s_test'
-   launchDir = '/home/user/k8s_test/launch'
-   projectDir = '/home/user/k8s_test/project'
-   workDir = '/home/user/k8s_test/temp'
+   homeDir = '/home/k8s_test'
+   launchDir = '/home/k8s_test/launch'
+   projectDir = '/home/k8s_test/project'
+   workDir = '/home/k8s_test/temp'
 }
 
 
 params {
-outdir = "/home/user/project/results"
-genome = "/home/user/project/ref/index/Homo_sapiens_assembly38.fasta.64"
-reads = "/home/user/project/raw_data/**/*R{1,2}-small.fastq.gz"
-gatk_package = "/home/user/project/src/gatk-package-4.2.3.0-local.jar"
-ref_genome = "/home/user/project/ref/seq/Homo_sapiens_assembly38.fasta"
-known_sites = "/home/user/project/ref/annot/1000G_phase1.snps.high_confidence.hg38.vcf.gz"
-md_output = "/home/user/project/results/HG002_HiSeq_2MergedRuns/MarkDuplicates"
-true_vcf = "/home/user/project/results/true_vcf/HG002_GRCh38_1_22_v4.2.1_benchmark.vcf.gz"
-script = "/home/user/project/src/benchmark/Staz/python_staz/benchmark.py"
+outdir = "/home/project/results"
+genome = "/home/project/ref/index/Homo_sapiens_assembly38.fasta.64"
+reads = "/home/project/raw_data/**/*R{1,2}-small.fastq.gz"
+gatk_package = "/home/project/src/gatk-package-4.2.3.0-local.jar"
+ref_genome = "/home/project/ref/seq/Homo_sapiens_assembly38.fasta"
+known_sites = "/home/project/ref/annot/1000G_phase1.snps.high_confidence.hg38.vcf.gz"
+md_output = "/home/project/results/HG002_HiSeq_2MergedRuns/MarkDuplicates"
+true_vcf = "/home/project/results/true_vcf/HG002_GRCh38_1_22_v4.2.1_benchmark.vcf.gz"
+script = "/home/project/src/benchmark/Staz/python_staz/benchmark.py"
 
 }
 
@@ -30,6 +30,6 @@ process {
    executor = 'k8s'
    cpus = 1
    memory = '1GB'
-   pod = [[securityContext:[fsGroupChangePolicy:'OnRootMismatch', runAsUser:1000, runAsGroup:1, fsGroup:1]], [nodeSelector:'storage=local-ssd']]
+   pod = [[securityContext:[fsGroupChangePolicy:'OnRootMismatch', runA:1000, runAsGroup:1, fsGroup:1]], [nodeSelector:'storage=local-ssd']]
 }
 
