--- a/nextflow.config
+++ b/nextflow.config
@@ -30,6 +30,6 @@ process {
    executor = 'k8s'
    cpus = 1
    memory = '1GB'
-   pod = [[securityContext:[fsGroupChangePolicy:'OnRootMismatch', runA:1000, runAsGroup:1, fsGroup:1]], [nodeSelector:'storage=local-ssd']]
+ pod = [[securityContext:[fsGroupChangePolicy:'OnRootMismatch', runAsUser:1000, runAsGroup:1, fsGroup:1]], [nodeSelector:'storage=local-ssd']]
 }
 
