--- a/nextflow.config
+++ b/nextflow.config
@@ -2,7 +2,7 @@ k8s {
    namespace = 'medgen-ns'
    runAsUser = 1000
    storageClaimName = 'home-patricie-0'
-   storageMountPath = '/home'
+   storageMountPath = '/home/user'
    homeDir = '/home/k8s_test'
    launchDir = '/home/k8s_test/launch'
    projectDir = '/home/k8s_test/project'
