--- a/nextflow.config
+++ b/nextflow.config
@@ -3,10 +3,10 @@ k8s {
    runAsUser = 1000
    storageClaimName = 'home-patricie-0'
    storageMountPath = '/home/user'
-   homeDir = '/home/k8s_test'
-   launchDir = '/home/k8s_test/launch'
-   projectDir = '/home/k8s_test/project'
-   workDir = '/home/k8s_test/temp'
+   homeDir = '/home/user/k8s_test'
+   launchDir = '/home/k8s_test/user/launch'
+   projectDir = '/home/k8s_test/user/project'
+   workDir = '/home/k8s_test/user/temp'
 }
 
 
