--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,8 +17,14 @@ jobs:
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag latest
 
-    - name: Login to Docker Hub
-      run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.USER_NAME }}" --password-stdin
-      
-    - name: Push Docker image to Docker Hub
-      run: docker push "${{ secrets.USER_NAME }}/py_container:latest"
+     - name: Log in to Docker Hub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.USER_NAME }}
+        password: ${{ secrets.DOCKER_TOKEN }}
+
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v2
+      with:
+        push: true
+        tags: ${{ secrets.USER_NAME }}/py_container:latest
