--- a/delly_k8s/nextflow.config
+++ b/delly_k8s/nextflow.config
@@ -7,12 +7,7 @@ k8s {
    launchDir = '/home/user/delly_k8s/launch'
    projectDir = '/home/user/delly_k8s/project'
    workDir = '/home/user/delly_k8s/temp'
-}
-
-
-params {
-outdir = "/home/delly_k8s/results"
-
+   pod = [ [volumeClaim: 'pvc-medgen-plevova', mountPath: "/storage" ]]
 }
 
 process {
