--- a/.github/workflows/r-dnacopy-image.yml
+++ b/.github/workflows/r-dnacopy-image.yml
@@ -25,6 +25,6 @@ jobs:
     - name: Build and push Docker image
       uses: docker/build-push-action@v2
       with:
-        context: .
+        context: ./rdocker
         push: true
         tags: ${{ secrets.USER_NAME }}/my-r-dnacopy-image:latest
