--- a/rdocker/Dockerfile
+++ b/rdocker/Dockerfile
@@ -1,19 +1,21 @@
-# Use the official R base image
-FROM r-base:4.0.5
+# Use the official Ubuntu image as the base
+FROM ubuntu:20.04
 
-# Install necessary system dependencies
+# Install system dependencies and R
 RUN apt-get update && apt-get install -y \
     libcurl4-openssl-dev \
     libxml2-dev \
     libssl-dev \
-    libxt-dev
+    libxt-dev \
+    && apt-get install -y --no-install-recommends r-base \
+    && rm -rf /var/lib/apt/lists/*
 
-# Install required R packages from CRAN
+# Install R packages from CRAN
 RUN R -e "install.packages(c('ggplot2', 'scales', 'gtable', 'grid'), repos='http://cran.rstudio.com/')"
 
 # Install Bioconductor and DNAcopy package
 RUN R -e "if (!requireNamespace('BiocManager', quietly = TRUE)) install.packages('BiocManager'); BiocManager::install('DNAcopy')"
 
-# Set the working directory
+# Set the working directory (optional)
 WORKDIR /app
 
