--- a/rdocker/Dockerfile
+++ b/rdocker/Dockerfile
@@ -10,12 +10,11 @@ RUN apt-get update && apt-get install -y \
     && apt-get install -y --no-install-recommends r-base \
     && rm -rf /var/lib/apt/lists/*
 
-# Install R packages from CRAN
-RUN R -e "install.packages(c('ggplot2', 'scales', 'gtable', 'grid'), repos='http://cran.rstudio.com/')"
-
-# Install Bioconductor and DNAcopy package
-RUN R -e "if (!requireNamespace('BiocManager', quietly = TRUE)) install.packages('BiocManager'); BiocManager::install('DNAcopy')"
+# Install R packages from CRAN and Bioconductor
+RUN R -e "install.packages(c('ggplot2', 'scales', 'gtable', 'grid'), repos='http://cran.rstudio.com/')" \
+    && R -e "if (!require('BiocManager', quietly = TRUE)) install.packages('BiocManager'); BiocManager::install('DNAcopy')"
 
 # Set the working directory (optional)
 WORKDIR /app
+
 
