--- a/rdocker/Dockerfile
+++ b/rdocker/Dockerfile
@@ -7,14 +7,17 @@ RUN apt-get update && apt-get install -y \
     libxml2-dev \
     libssl-dev \
     libxt-dev \
+    liblzma-dev \
+    zlib1g-dev \
+    libgmp-dev \
+    libgit2-dev \
+    gfortran \
     && apt-get install -y --no-install-recommends r-base \
     && rm -rf /var/lib/apt/lists/*
 
 # Install R packages from CRAN and Bioconductor
 RUN R -e "install.packages(c('ggplot2', 'scales', 'gtable', 'grid'), repos='http://cran.rstudio.com/')" \
-    && R -e "if (!require('BiocManager', quietly = TRUE)) install.packages('BiocManager'); BiocManager::install('DNAcopy')"
+    && R -e "if (!require('BiocManager', quietly = TRUE)) install.packages('BiocManager'); BiocManager::install('DNAcopy', update = TRUE, ask = FALSE)"
 
 # Set the working directory (optional)
 WORKDIR /app
-
-
