--- a/ascat/Dockerfile
+++ b/ascat/Dockerfile
@@ -1,23 +1,23 @@
-# Stage 1: Build the required dependencies and alleleCount
-FROM rocker/tidyverse:4.2.3 as builder
+# Use a lightweight Linux distribution as base image
+FROM rocker/r-base:4.1.3
 
-# Install system dependencies for ASCAT, Bioconductor, and alleleCount compilation
-RUN apt-get update && apt-get install -y \
-    libcurl4-openssl-dev \
-    libssl-dev \
-    libxml2-dev \
-    gfortran \
-    libgit2-dev \
-    python3 \
-    python3-pip \
-    build-essential \
-    git \
-    libboost-dev \
-    libboost-iostreams-dev \
-    libboost-filesystem-dev \
-    libgsl-dev \
-    libbz2-dev \
-    liblzma-dev \
+# Set environment variables to avoid interactive prompts during package installation
+ENV DEBIAN_FRONTEND=noninteractive \
+    LC_ALL=C.UTF-8 \
+    LANG=C.UTF-8
+
+# Install system dependencies
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends \
+        build-essential \
+        libcurl4-gnutls-dev \
+        libxml2-dev \
+        libssl-dev \
+        wget \
+        git \
+        vim \
+        g++ \
+        make \
     && rm -rf /var/lib/apt/lists/*
 
 # Install Bioconductor packages (GenomicRanges, IRanges, DNAcopy)
@@ -29,43 +29,18 @@ RUN R -e "install.packages('devtools')" && \
     R -e "devtools::install_github('VanLoo-lab/ascat/ASCAT')"
 
 # Clone the alleleCount repository and build it
-RUN git clone https://github.com/cancerit/alleleCount.git /alleleCount
-WORKDIR /alleleCount
+RUN git clone https://github.com/cancerit/alleleCount.git /alleleCount && \
+    cd /alleleCount && \
+    make
 
-# Build the alleleCount tool
-RUN make
+# Set environment variables for alleleCount (if needed)
+ENV ALLELECOUNTPATH=/alleleCount
 
-# Stage 2: Create the runtime environment
-FROM ubuntu:20.04
-
-# Install required runtime dependencies for alleleCount and ASCAT
-RUN apt-get update && apt-get install -y \
-    apt-transport-https \
-    locales \
-    curl \
-    ca-certificates \
-    libperlio-gzip-perl \
-    bzip2 \
-    psmisc \
-    time \
-    zlib1g \
-    liblzma5 \
-    libncurses5 \
-    p11-kit \
-    python3 \
-    python3-pip \
-    && rm -rf /var/lib/apt/lists/*
-
-# Set environment variables for ASCAT and alleleCount
-ENV OPT /opt/wtsi-cgp
-ENV PATH=$OPT/bin:$OPT/biobambam2/bin:$PATH
-ENV PERL5LIB=$OPT/lib/perl5
-ENV LD_LIBRARY_PATH=$OPT/lib
-ENV LC_ALL=en_US.UTF-8
-ENV LANG=en_US.UTF-8
-
-# Copy the compiled alleleCount and dependencies from the builder stage
-COPY --from=builder /alleleCount /opt/wtsi-cgp
-
-# Set the working directory in the container
+# Optionally, you can add your working directory here
 WORKDIR /app
+
+# Copy any additional scripts or data needed for your analysis
+# COPY . .
+
+# Set the default command to start an R session (or run a script)
+CMD ["R"]
