--- a/ascat/Dockerfile
+++ b/ascat/Dockerfile
@@ -19,6 +19,9 @@ RUN apt-get update && \
         vim \
         g++ \
         make \
+        autoconf \
+        automake \
+        libtool \
     && rm -rf /var/lib/apt/lists/*
 
 # Install Bioconductor packages (GenomicRanges, IRanges, DNAcopy)
@@ -29,13 +32,16 @@ RUN R -e "install.packages('BiocManager')" && \
 RUN R -e "install.packages('devtools')" && \
     R -e "devtools::install_github('VanLoo-lab/ascat/ASCAT')"
 
-# Clone the alleleCount repository and build it
-RUN git clone https://github.com/cancerit/alleleCount.git /alleleCount && \
-    cd /alleleCount && \
-    make
+# Clone the alleleCount repository from the 'dev' branch and build it
+RUN git clone --branch dev https://github.com/cancerit/alleleCount.git /alleleCount && \
+    cd /alleleCount/build && \
+    ./build.sh
 
 # Set environment variables for alleleCount (if needed)
-ENV ALLELECOUNTPATH=/alleleCount
+ENV ALLELECOUNTPATH=/alleleCount/c
 
 # Optionally, you can add your working directory here
 WORKDIR /app
+
+# Set the default command to start an R session (or run a script)
+CMD ["R"]
