--- a/ascat/Dockerfile
+++ b/ascat/Dockerfile
@@ -1,46 +1,64 @@
-# 1️⃣ Stage 1: Compile alleleCounter
+# ===============================
+# 1️⃣ Stage 1: Build alleleCount
+# ===============================
 FROM ubuntu:20.04 AS builder
 
-# Install dependencies
-RUN apt-get update && apt-get install -y \
-    build-essential \
-    git \
-    zlib1g-dev \
-    && rm -rf /var/lib/apt/lists/*
+# Set environment variables
+ENV OPT=/opt/wtsi-cgp \
+    PATH=/opt/wtsi-cgp/bin:/opt/wtsi-cgp/biobambam2/bin:$PATH \
+    PERL5LIB=/opt/wtsi-cgp/lib/perl5 \
+    LD_LIBRARY_PATH=/opt/wtsi-cgp/lib \
+    LC_ALL=en_US.UTF-8 \
+    LANG=en_US.UTF-8 \
+    VER_HTSLIB="1.11" \
+    VER_LIBDEFLATE="v1.6"
 
-# Clone and compile alleleCounter
-WORKDIR /opt
-RUN git clone --recursive https://github.com/cancerit/alleleCount.git && \
-    cd alleleCount && \
-    make
+# Install required system dependencies
+RUN apt-get update && apt-get install -yq --no-install-recommends \
+    build-essential apt-transport-https curl ca-certificates make \
+    bzip2 gcc locales wget zlib1g-dev libbz2-dev liblzma-dev \
+    libcurl4-gnutls-dev libncurses5-dev libtasn1-dev nettle-dev \
+    libgmp-dev libp11-kit-dev && \
+    locale-gen en_US.UTF-8 && \
+    update-locale LANG=en_US.UTF-8 && \
+    rm -rf /var/lib/apt/lists/*
 
-# 2️⃣ Stage 2: Final Image with ASCAT + alleleCounter
-FROM rocker/tidyverse:4.2.3
+# Build external dependencies
+COPY build/opt-build.sh build/
+RUN bash build/opt-build.sh $OPT
 
-# Install additional system dependencies for ASCAT
-RUN apt-get update && apt-get install -y \
-    libcurl4-openssl-dev \
-    libssl-dev \
-    libxml2-dev \
-    gfortran \
-    libgit2-dev \
-    python3 \
-    python3-pip \
-    && rm -rf /var/lib/apt/lists/*
+# Build alleleCount
+COPY . .
+RUN bash build/opt-build-local.sh $OPT
 
-# Install Bioconductor packages (GenomicRanges & IRanges)
-RUN R -e "install.packages('BiocManager')" && \
-    R -e "BiocManager::install(c('GenomicRanges', 'IRanges'))"
+# ===============================
+# 2️⃣ Stage 2: Create Minimal Image
+# ===============================
+FROM ubuntu:20.04
 
-# Install devtools to install ASCAT from GitHub
-RUN R -e "install.packages('devtools')" && \
-    R -e "devtools::install_github('VanLoo-lab/ascat/ASCAT')"
+# Set environment variables
+ENV OPT=/opt/wtsi-cgp \
+    PATH=/opt/wtsi-cgp/bin:/opt/wtsi-cgp/biobambam2/bin:$PATH \
+    PERL5LIB=/opt/wtsi-cgp/lib/perl5 \
+    LD_LIBRARY_PATH=/opt/wtsi-cgp/lib \
+    LC_ALL=en_US.UTF-8 \
+    LANG=en_US.UTF-8
 
-# Copy compiled alleleCounter binary from builder
-COPY --from=builder /opt/alleleCount/alleleCounter /usr/local/bin/
+# Install runtime dependencies (minimal)
+RUN apt-get update && apt-get install -yq --no-install-recommends \
+    locales curl ca-certificates libperlio-gzip-perl bzip2 psmisc \
+    time zlib1g liblzma5 libncurses5 p11-kit && \
+    locale-gen en_US.UTF-8 && \
+    update-locale LANG=en_US.UTF-8 && \
+    rm -rf /var/lib/apt/lists/*
 
-# Verify installation
-RUN which alleleCounter && alleleCounter --version
+# Copy built alleleCount from the builder stage
+COPY --from=builder $OPT $OPT
 
-# Set working directory
-WORKDIR /app
+# Create a non-root user
+RUN adduser --disabled-password --gecos '' ubuntu && chsh -s /bin/bash ubuntu
+
+USER ubuntu
+WORKDIR /home/ubuntu
+
+CMD ["/bin/bash"]
