--- a/allelecounter/Dockerfile
+++ b/allelecounter/Dockerfile
@@ -1,30 +1,23 @@
 # Use a base image with Mamba
 FROM mambaorg/micromamba:latest
 
-# Set working directory
+# Set working directory for environment creation
 WORKDIR /opt/env
 
-# Define the conda environment directly in the Dockerfile
-RUN echo "name: allelecount_env\n\
-channels:\n\
-  - conda-forge\n\
-  - bioconda\n\
-  - defaults\n\
-dependencies:\n\
-  - allelecounter\n\
-  - mamba" > /tmp/conda.yml
+# Define the conda environment file in the Dockerfile
+COPY conda.yml /tmp/conda.yml
 
 # Use Mamba to create the environment
 RUN micromamba create -f /tmp/conda.yml -y && micromamba clean --all --yes
 
-# Set the environment path to the created environment
+# Activate the environment and set the path
 ENV PATH="/opt/conda/envs/allelecount_env/bin:$PATH"
 
-# Verify installation
+# Verify the installation of alleleCounter
 RUN alleleCounter --version
 
 # Set the default working directory for the container
-WORKDIR /data
+WORKDIR /app
 
-# Set the default command for the container
+# Set the default command for the container to launch a shell
 CMD ["/bin/bash"]
