--- a/.github/workflows/allelecount.yml
+++ b/.github/workflows/allelecount.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v2  # Updated to v2 for better security
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          username: ${{ secrets.USER_NAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push Docker image
@@ -28,4 +28,4 @@ jobs:
           context: ./allelecounter
           file: ./allelecounter/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/allelecounter-image:latest
+          tags: ${{ secrets.USER_NAME }}/allelecounter-image:latest
