--- a/allelecounter/Dockerfile
+++ b/allelecounter/Dockerfile
@@ -1,25 +1,21 @@
-FROM debian:latest
+# Use a modern Ubuntu base image
+FROM ubuntu:22.04  
 
-# Install system utilities and dependencies
+# Install system dependencies
 RUN apt-get update && apt-get install -y \
-    curl ca-certificates bzip2 procps && \
-    rm -rf /var/lib/apt/lists/*
+    curl ca-certificates procps git build-essential cmake \
+    && rm -rf /var/lib/apt/lists/*
 
-# Install Micromamba
-RUN curl -L https://micro.mamba.pm/api/micromamba/linux-64/latest | tar -xvj -C /usr/local
-
-# Set up environment variables
-ENV PATH=/usr/local/bin/micromamba/bin:$PATH
-ENV MAMBA_ROOT_PREFIX=/opt/micromamba
-
-# Create and activate a Micromamba environment
-COPY conda.yml /tmp/conda.yml
-RUN micromamba create -y -n allelecount_env -f /tmp/conda.yml
-
-# Activate the environment
-ENV PATH=/opt/micromamba/envs/allelecount_env/bin:$PATH
+# Clone and install alleleCounter
+WORKDIR /opt
+RUN git clone https://github.com/cancerit/alleleCount.git && \
+    cd alleleCount && \
+    mkdir build && cd build && \
+    cmake .. && make -j4 && \
+    cp alleleCounter /usr/local/bin/
 
 # Set working directory
 WORKDIR /app
 
+# Default command
 CMD ["/bin/bash"]
