--- a/allelecounter/Dockerfile
+++ b/allelecounter/Dockerfile
@@ -1,18 +1,22 @@
-# Use an official Miniconda image as the base
-FROM continuumio/miniconda3:latest
+FROM continuumio/miniconda3
 
-# Set environment variables
-ENV LANG=C.UTF-8 LC_ALL=C.UTF-8
+# Install system dependencies
+RUN apt-get update && apt-get install -y \
+    procps \
+    libhts-dev \
+    libcurl4-openssl-dev \
+    libssl-dev \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
 
-# Install essential utilities and cancerit-allelecount
-RUN apt-get update && apt-get install -y procps && \
-    conda install -c bioconda -c conda-forge -y cancerit-allelecount && \
-    conda clean -afy && \
-    find /opt/conda/ -follow -type f -name '*.a' -delete && \
-    find /opt/conda/ -follow -type f -name '*.pyc' -delete && \
-    find /opt/conda/ -follow -type f -name '*.js.map' -delete && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
+# Install cancerit-allelecount and its dependencies
+RUN conda install -c bioconda -c conda-forge -y \
+    cancerit-allelecount \
+    htslib \
+    && conda clean -afy \
+    && find /opt/conda/ -follow -type f -name '*.a' -delete \
+    && find /opt/conda/ -follow -type f -name '*.pyc' -delete \
+    && find /opt/conda/ -follow -type f -name '*.js.map' -delete
 
 # Set the working directory in the container
 WORKDIR /app
