--- a/allelecounter/Dockerfile
+++ b/allelecounter/Dockerfile
@@ -1,18 +1,13 @@
 FROM continuumio/miniconda3
 
-# Install system dependencies
-RUN apt-get update && apt-get install -y \
-    procps \
-    libhts-dev \
-    libcurl4-openssl-dev \
-    libssl-dev \
-    && apt-get clean \
-    && rm -rf /var/lib/apt/lists/*
+# Set environment variables
+ENV LANG=C.UTF-8 LC_ALL=C.UTF-8
 
-# Install cancerit-allelecount and its dependencies
+# Install cancerit-allelecount and its dependencies using conda
 RUN conda install -c bioconda -c conda-forge -y \
     cancerit-allelecount \
     htslib \
+    procps \
     && conda clean -afy \
     && find /opt/conda/ -follow -type f -name '*.a' -delete \
     && find /opt/conda/ -follow -type f -name '*.pyc' -delete \
