--- a/allelecounter/Dockerfile
+++ b/allelecounter/Dockerfile
@@ -5,10 +5,10 @@ FROM continuumio/miniconda3:latest
 WORKDIR /app
 
 # Install dependencies from conda YAML conda
-COPY conda.yaml /app/conda.yaml
+COPY conda.yaml /app/conda.yml
 
 # Install the conda via conda
-RUN conda env create -f conda.yaml
+RUN conda env create -f conda.yml
 
 # Set the default conda to activate
 SHELL ["conda", "run", "-n", "base", "/bin/bash", "-c"]
