--- a/allelecounter/Dockerfile
+++ b/allelecounter/Dockerfile
@@ -4,14 +4,17 @@ FROM continuumio/miniconda3:latest
 # Set the working directory
 WORKDIR /app
 
-# Install dependencies from conda YML conda
+# Copy the environment YAML file
 COPY conda.yml /app/conda.yml
 
-# Install the conda via conda
-RUN conda env create -f conda.yml
+# Create the environment with a custom path
+RUN conda env create -f /app/conda.yml --prefix /opt/conda/envs/myenv
 
-# Set the default conda to activate
-SHELL ["conda", "run", "-n", "base", "/bin/bash", "-c"]
+# Activate the environment
+RUN echo "conda activate myenv" >> ~/.bashrc
+
+# Set the default environment to activate
+SHELL ["conda", "run", "-n", "myenv", "/bin/bash", "-c"]
 
 # Set the default command for the container
 CMD ["bash"]
